--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "dektrium/yii2-user": "0.9.*"
+        "dektrium/yii2-user": "0.9.*",
+        "mdmsoft/yii2-admin": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
